Fix select list arrow z-index issue

--- a/src/scss/objects/_form.scss
+++ b/src/scss/objects/_form.scss
@@ -52,7 +52,6 @@ select.form__control {
         position: absolute;
         right: 0.5rem;
         top: 50%;
-        z-index: -1;
     }
 
     select {
@@ -225,4 +224,3 @@ select.form__control {
         top: 0;
     }
 }
-
